# tauri-osc-stt

./: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  ConfigLoader.tsx  ProfileSelection.tsx  TalkToText.module.scss  TalkToText.tsx  app.module.scss  type.d.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs
src-tauri/src/commands/: microphone.rs  mod.rs  osc_receiver.rs  osc_sender.rs
src/SpeachToText/: ProfileSelection.module.scss  ProfileSelection.tsx  SpeachToText.module.scss  SpeachToText.tsx
src/atoms/: avatar.ts  config.ts  logs.ts
src/atoms/config/: 0_0_1.ts  0_0_2.ts  0_0_3.ts
src/components/SpeachToText/: ProfileSelection.module.scss  SpeachToText.module.scss  SpeachToText.tsx  index.ts
src/components/settings/: Audio.tsx  StartStop.tsx  audio.module.scss
src/components/settings/condition/: condition.tsx
src/components/settings/profile/: KeyWords.tsx  autoChange.tsx  keyword.module.scss  profile.module.scss
src/components/settings/profile/OSCEditor/: OSCEditor.module.scss  OSCEditor.tsx
src/components/vrc/: avatar.tsx  logs.tsx  vrc.tsx
src/hooks/: log.ts
src/lib/: portManager.ts  utils.ts
src/settings/: Audio.tsx  KeyWords.tsx  Settings.tsx  StartStop.tsx  keyword.module.scss  profile.module.scss  profile.tsx  remote.tsx
src/settings/condition/: condition.module.scss  condition.tsx
src/settings/profile/: AddProfile.tsx  KeyWords.tsx  ProfileEditor.tsx  ProfileList.module.scss  ProfileList.tsx  autoChange.tsx  keyword.module.scss  profile.tsx
src/settings/profile/OSCEditor/: OSCEditor.tsx  index.ts
src/vrc/: avatar.tsx  logs.tsx  vrc.tsx
