[package]
name = "tauri-osc-stt"
version = "0.0.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [ "tray-icon"] }
#tauri = { path = "./tauri-2.0.0-beta.2", features = ["protocol-asset"] }
tauri-plugin-single-instance = "2.0.0-beta"
tauri-plugin-fs = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-clipboard-manager = "2.0.0-beta"
tauri-plugin-shell = "2.0.0-beta"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
webview2-com = "0.30.0"
once_cell = "1.19.0"
wcpopup = "0.1.2"
win32props = { git = "https://github.com/mrdkprj/r_win32props.git" }
rosc = "0.10.1"
tokio = { version = "1.0", features = ["full"] }
windows = { version = "0.56", features = ["Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader"] }
windows-core = "0.56.0"
windows-result = "0.1.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[patch.crates-io]
#tao = { path = "./tao-0.28.0" }
#wry = { path = './wry-0.39.1' }
#webview2-com-sys = { path = './webview2-com-sys-0.28.0' }
#wcpopup = { path = "./wcpopup" }
